--- a/src/SmartHotel.Clients.NFC/SmartHotel.Clients.NFC/SmartHotel.Clients.NFC.csproj
+++ b/src/SmartHotel.Clients.NFC/SmartHotel.Clients.NFC/SmartHotel.Clients.NFC.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Autofac" Version="4.6.1" />
     <PackageReference Include="Microcharts" Version="0.7.1" />
     <PackageReference Include="Microcharts.Forms" Version="0.7.1" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xam.Plugins.Vibrate" Version="3.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.2.20" />
